# exomat

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
contrib/: package_exomat.sh  release.md
docs/: build.md  control_flow.md  glossary.md  harness.md
src/: lib.rs  main.rs
src/experiment/: experiment_run.rs  experiment_series.rs  experiment_source.rs  experiment_traits.rs  out_file.rs
src/harness/: env.rs  lua_env_test.rs  run.rs  run.sh.template  skeleton.rs  summary.rs  table.rs
src/harness/env/: environment.rs  environment_container.rs  exomat_environment.rs  lua.rs
src/harness/table/: run_reader.rs  series_reader.rs
src/helper/: archivist.rs  errors.rs  fs_names.rs  series_reader.rs  test_fixtures.rs  test_helper.rs
tests/: env_test.lua  test_harness_full.sh
