[package]
name = "exomat"
version = "0.1.0"
edition = "2021"

readme = "README.md"
autobins = false

[[bin]]
name = "exomat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "unstable-v5"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.32"
chrono =  { version = "0.4" }

serde = { version = "1.0", features = ["derive"] }
csv = "1.3.1"

regex = "1.11.1"

fs_extra = "1.3.0"
dotenvy = "0.15.7"
serde-envfile = "0.1.0"
itertools = "0.14.0"

thiserror = "2"
log = "0.4.25"
spdlog-rs = { version = "0.4.3", features = ["log"] }
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
strip-ansi = "0.1.0"
tabled = "0.19.0"
rand = "0.9.2"
rstest = "0.26.1"

[build-dependencies]
clap =  { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "3.0.2"

[dev-dependencies]
tempfile = "3.12.0"
faccess = "0.2.4"
rusty-fork = "0.3.0"

